# pingcap-talent-plan

./: .gitignore  LICENSE  README.md
bb2/: Cargo.toml
bb2/src/: lib.rs
kvs/: Cargo.toml
kvs/src/: error.rs  kvs.rs  lib.rs
kvs/tests/: tests.rs
