[package]
name = "kvs"
version = "0.1.0"
authors = ["nmy"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
failure = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
tempfile = "3.1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"
walkdir = "2.3.1"
